Fix more issues related to the editor. Z-index made topmenu unavailable, button for returning to slide preview was hidden in editor mode

--- a/css/kreator.styl
+++ b/css/kreator.styl
@@ -3,6 +3,33 @@ var-add-slide-size--large = 3.5rem;
 var-sidemenu-width = 16rem;
 var-sidemenu-width--half = var-sidemenu-width / 2;
 
+transition(n)
+  -moz-transition-duration n
+  -webkit-transition-duration n
+  transition-duration n
+
+delayed-fade-in(n)
+  -moz-animation fade-in 2s linear;
+  -webkit-animation fade-in 2s linear;
+  animation fade-in 2s linear;
+
+@-moz-keyframes fade-in {
+  0% {opacity:0}
+  80% {opacity:0}
+  100% {opacity:1}
+}
+@-webkit-keyframes fade-in {
+  0% {opacity:0}
+  80% {opacity:0}
+  100% {opacity:1}
+}
+
+@keyframes myanim {
+  0% {opacity:0}
+  80% {opacity: 0}
+  100% {opacity: 1}
+}
+
 body
   font-size: 16px;
   color: #333;
@@ -20,6 +47,9 @@ body
 .section--editing .kreator-slide-content
   display none
 
+#topmenu
+  animation: myanim 1.5s linear 3 alternate;
+
 #editor
   width 960px
   height 540px
@@ -29,6 +59,14 @@ body
   left 55%
   margin-left -480px
   z-index 10
+  opacity 1
+  transition(.5s)
+  border-radius: 10px;
+  box-shadow:0 0 5px #000;
+  padding: .5rem;
+  
+#editor.visually-hidden
+  opacity 0
 
 .add-slide
   position: absolute;
@@ -37,17 +75,15 @@ body
   width: var-add-slide-size;
   height: var-add-slide-size;
   font-size: var-add-slide-size !important;
-  line-height: var-add-slide-size;
-  text-align: center;
+  text-align center
   color: #333;
   z-index: 100;
   cursor: pointer;
   -webkit-transition-duration: .2s;
   -moz-transition-duration: .2s;
   transition-duration: .2s;
-  &:hover
-    margin: -.5rem;
-    padding: .5rem;
+  white-space: pre-line;
+  word-wrap: break-word;
 
 .add-slide--right
   right: 3%;
@@ -162,9 +198,20 @@ hr
 
 .hidden
   display: none;
+  
+.visually-hidden
+  visibility hidden
 
 .dark-background
   background: #333;
+
+.toolbar
+  position relative
+  z-index 2
+
+.reveal
+  position relative
+  z-index 0
 
 .remote-control
   background: #222;
@@ -217,6 +264,9 @@ hr
   transition-duration .2s
 
 section:hover .slide-edit-lock
+  opacity 1
+  
+.slide-edit-lock.active
   opacity 1
 
 @media only screen and (max-width: 850px)
